# GTM-Newsletter

./: .gitignore  README.md  backend_test.py  design_guidelines.json  pyproject.toml  vercel.json
.emergent/: emergent.yml
api/: index.py  requirements.txt
backend/: .env  requirements.txt  server.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: SidebarLayout.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.jsx  NewNewsletter.jsx  PipelineView.jsx  Preview.jsx  Settings.jsx
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
