[project]
name = "gtm-newsletter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.1",
    "starlette==0.37.2",
    "uvicorn==0.25.0",
    "python-dotenv==1.2.1",
    "motor==3.3.1",
    "pymongo==4.5.0",
    "dnspython==2.8.0",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "annotated-types==0.7.0",
    "python-multipart==0.0.22",
    "anyio==4.12.1",
    "sniffio==1.3.1",
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "h11==0.16.0",
    "certifi==2026.2.25",
    "idna==3.11",
    "charset-normalizer==3.4.4",
    "typing_extensions==4.15.0",
    "anthropic==0.84.0",
    "openai==1.99.9",
    "litellm==1.80.0",
    "jiter==0.13.0",
    "distro==1.9.0",
    "requests==2.32.5",
    "urllib3==2.6.3",
]
